change model set

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "project": {
     "model": {
       "id": "9",
-      "name": "Blog / Content Platform"
+      "name": "Library Management System"
     },
     "sumStudentId": 272040809
   },
