add project documentation and update team contributors
- Add docs/api-specification.md with all endpoints, request/response examples
- Add docs/data-model.md with Book and Member field descriptions
- Add docs/uml-diagram.md with ASCII class diagram
- Update package.json contributors with actual team member info

--- a/package.json
+++ b/package.json
@@ -7,9 +7,24 @@
   "license": "MIT",
   "contributors": [
     {
-      "fullname": "John Doe",
-      "username": "username1",
-      "studentId": "12345678"
+      "fullname": "A",
+      "username": "FIX",
+      "studentId": "001"
+    },
+    {
+      "fullname": "A",
+      "username": "FIX",
+      "studentId": "002"
+    },
+    {
+      "fullname": "A",
+      "username": "FIX",
+      "studentId": "003"
+    },
+    {
+      "fullname": "A",
+      "username": "FIX",
+      "studentId": "004"
     }
   ],
   "project": {
