--- a/package.json
+++ b/package.json
@@ -7,9 +7,24 @@
   "license": "MIT",
   "contributors": [
     {
-      "fullname": "John Doe",
-      "username": "username1",
-      "studentId": "12345678"
+      "fullname": "ชยุตพล วงศ์สายเชื้อ",
+      "username": "Whitemehat",
+      "studentId": "68010217"
+    },
+    {
+      "fullname": "จริภิญา หมื่นทัน",
+      "username": "Jariphiya",
+      "studentId": "68010130"
+    },
+    {
+      "fullname": "จิดาภา โรจน์วิทยา",
+      "username": "sunshine-002",
+      "studentId": "68010141"
+    },
+    {
+      "fullname": "ณัฏฐวัฒน์ เจริญศิริพงศ์",
+      "username": "Applelyyyy",
+      "studentId": "68010321"
     }
   ],
   "project": {
